fix alignment issues

--- a/_sass/_mailchimp.scss
+++ b/_sass/_mailchimp.scss
@@ -18,7 +18,9 @@
   font-family: 'avenir';
   max-width: 42vw;
   height: 40px;
-  padding-top: 4px;
+  padding-top: 3px;
+  padding-bottom: 2px;
+  text-align: center;
 }
 
 .mc_button_inside {
@@ -26,6 +28,7 @@
   background: transparent;
   text-transform: uppercase;
   font-weight: 700;
+  text-align: center;
 }
 
 .hidden {
